--- a/_data/partners/index.yaml
+++ b/_data/partners/index.yaml
@@ -1,28 +1,19 @@
+
 - view_sort: A
-  name: Streamdata.io
-  identifier: streamdata
-  url: http://streamdata.io
-  description: Streamdata is a software vendor making real-time data accessible to all by operating a proxy turning request / response APIs into feeds of real-time events.
-  image: https://s3.amazonaws.com/kinlane-productions/streamdata/streamdata-horizontal-3.png
+  name: Postman
+  identifier: postman
+  url: https://www.getpostman.com/
+  description: Manage all of your organization's APIs in Postman, with the industry's most complete API development environment.
+  image: https://apievangelist.com/images/postman-logo.png
   type: Sponsor
-  banner_url: https://s3.amazonaws.com/kinlane-productions/streamdata/streamdata-horizontal-2.png
-  tags: 'API Evangelist,Real-Time,Streaming'
+  banner_url: https://apievangelist.com/images/banner.png
+  tags: 'Development'
 - view_sort: B
-  name: Uptrends
-  identifier: uptrends
-  url:  https://www.uptrends.com/solutions/api-monitoring
-  description: Uptrends is the ultimate monitoring tool to stay in control of the uptime, performance, and functionality of your websites, APIs, and servers.
-  image: https://s3.amazonaws.com/kinlane-productions/uptrends/apievangelist-uptrends.png 
+  name: Tyk
+  identifier: tyk
+  url: https://tyk.io/
+  description: Tyk is an open source API Gateway that is fast, scalable and modern.
+  image: https://apievangelist.com/images/tyk-logo.png
   type: Sponsor
-  banner_url: https://s3.amazonaws.com/kinlane-productions/uptrends/apievangelist-uptrends.png
-  tags: 'API Monitoring'
-- view_sort: C
-  name: 3Scale
-  identifier: 3scale
-  url: http://apis.how/ake3nxbapm
-  description: 3scale makes it easy to open, secure, distribute, control and monetize APIs, that is built with performance, customer control and excellent time-to-value in
-    mind.
-  image: https://s3.amazonaws.com/kinlane-productions/partners/3scale-red-hat-logo.png
-  type: Sponsor
-  banner_url: https://s3.amazonaws.com/kinlane-productions/streamdata/streamdata-horizontal-2.png
-  tags: 'API Evangelist,Maangement'
+  banner_url: https://apievangelist.com/images/banner.png
+  tags: 'API Management'
