--- a/_data/sponsors/index.yaml
+++ b/_data/sponsors/index.yaml
@@ -4,7 +4,7 @@
   identifier: postman
   url: https://www.getpostman.com/
   description: Manage all of your organization's APIs in Postman, with the industry's most complete API development environment.
-  image: https://apievangelist.com/images/postman-logo.png
+  image: http://apievangelist.com/images/postman-logo.png
   type: Sponsor
   banner_url: https://apievangelist.com/images/banner.png
   tags: 'Development'
@@ -13,7 +13,7 @@
   identifier: tyk
   url: https://tyk.io/
   description: Tyk is an open source API Gateway that is fast, scalable and modern.
-  image: https://apievangelist.com/images/tyk-logo.png
+  image: http://apievangelist.com/images/tyk-logo.png
   type: Sponsor
   banner_url: https://apievangelist.com/images/banner.png
   tags: 'API Management'
